--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @shelter.name %></h1>
 
-<p><%= @shelter.address %></p>
-<p><%= @shelter.city %></p>
-<p><%= @shelter.state %></p>
-<p><%= @shelter.zip %></p>
+<p><%= "Address: #{@shelter.address}" %></p>
+<p><%= "City: #{@shelter.city}" %></p>
+<p><%= "State: #{@shelter.state}" %></p>
+<p><%= "Zip Code: #{@shelter.zip}" %></p>
