--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -4,3 +4,5 @@
 <p><%= "City: #{@shelter.city}" %></p>
 <p><%= "State: #{@shelter.state}" %></p>
 <p><%= "Zip Code: #{@shelter.zip}" %></p>
+
+<a href="/shelters/<%= @shelter.id %>/edit">Update Shelter</a>
