--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -5,4 +5,6 @@
 <p><%= "State: #{@shelter.state}" %></p>
 <p><%= "Zip Code: #{@shelter.zip}" %></p>
 
-<a href="/shelters/<%= @shelter.id %>/edit">Update Shelter</a>
+<%= link_to 'Update Shelter', "/shelters/#{@shelter.id}/edit" %>
+
+<%= link_to 'Delete Shelter', "/shelters/#{@shelter.id}/destroy", data: {:confirm => "Are you sure you want to delete #{@shelter.name}?"}, :method => :delete %>
