Change edit view from raw html to erb. Modify associated controller action to interact with updated code

--- a/app/views/shelters/edit.html.erb
+++ b/app/views/shelters/edit.html.erb
@@ -1,16 +1,15 @@
-<form action="/shelters/<%= @shelter.id %>" method="post">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <input type="hidden" name="_method" value="PATCH" />
-  <p>Updated shelter name:</p>
-  <input type='text' name='shelter[name]' value="<%= @shelter.name %>"/>
-  <p>Updated shelter address:</p>
-  <textarea name='shelter[address]'><%= @shelter.address %></textarea>
-  <p>Updated shelter city:</p>
-  <textarea name='shelter[city]'><%= @shelter.city %></textarea>
-  <p>Updated shelter state:</p>
-  <textarea name='shelter[state]'><%= @shelter.state %></textarea>
-  <p>Updated shelter zip code:</p>
-  <textarea name='shelter[zip]'><%= @shelter.zip %></textarea><br/>
 
-  <input type='submit', value='Update Shelter'/>
-</form>
+<%= form_tag("/shelters/#{@shelter.id}", method: :patch) do %>
+  <p><%= label_tag 'Updated Shelter Name' %></p>
+  <%= text_area_tag 'name', "#{@shelter.name}" %>
+  <p><%= label_tag 'Updated Shelter Address' %></p>
+  <%= text_area_tag 'address', "#{@shelter.address}" %>
+  <p><%= label_tag 'Updated Shelter City' %></p>
+  <%= text_area_tag 'city', "#{@shelter.city}" %>
+  <p><%= label_tag 'Updated Shelter State' %></p>
+  <%= text_area_tag 'state', "#{@shelter.state}" %>
+  <p><%= label_tag 'Updated Shelter Zip' %></p>
+  <%= text_area_tag 'zip', "#{@shelter.zip}" %>
+
+  <div><%= submit_tag 'Update Shelter' %></div>
+<% end %>
