--- a/app/views/shelters/pets.html.erb
+++ b/app/views/shelters/pets.html.erb
@@ -1,4 +1,4 @@
-<h1>All Pets</h1>
+<h1><%= "Pets at #{@shelter.name}" %></h1>
 
 <% @pets.each do |pet| %>
   <h2><%= pet.name %></h2>
@@ -6,3 +6,5 @@
   <p><%= "Age: #{pet.age}" %></p>
   <p><%= "Sex: #{pet.sex}" %></p>
 <% end %>
+
+<%= link_to 'Create Pet', "/shelters/#{@shelter.id}/pets/new" %>
