Change link from raw html to erb

--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -8,6 +8,4 @@
   <p><%= "Zip Code: #{shelter.zip}" %></p>
 <% end %>
 
-<ul>
-  <li><a href="/shelters/new">New Shelter</a></li>
-</ul>
+<%= link_to 'New Shelter', "/shelters/new" %>
