--- a/app/views/shelters/pets.html.erb
+++ b/app/views/shelters/pets.html.erb
@@ -3,8 +3,10 @@
 <% @pets.each do |pet| %>
   <h2><%= pet.name %></h2>
   <p><%= "#{pet.image}" %></p>
+  <p><%= "Description: #{pet.description}" %></p>
   <p><%= "Age: #{pet.age}" %></p>
   <p><%= "Sex: #{pet.sex}" %></p>
+  <p><%= "Adoption Status: #{pet.adoption_status}" %></p>
 <% end %>
 
 <%= link_to 'Create Pet', "/shelters/#{@shelter.id}/pets/new" %>
