--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -7,3 +7,5 @@
 <p><%= "Adoption Status: #{@pet.adoption_status}" %></p>
 
 <%= link_to 'Update Pet', "/pets/#{@pet.id}/edit" %>
+
+<%= link_to 'Delete Pet', "/pets/#{@pet.id}/destroy", data: {:confirm => "Are you sure you want to delete #{@pet.name}?"}, :method => :delete %>
