--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -2,6 +2,7 @@
 
 <% @shelters.each do |shelter| %>
   <h2><%= shelter.name %></h2>
+  <%= link_to 'Update Shelter', "/shelters/#{shelter.id}/edit" %>
   <p><%= "Address: #{shelter.address}" %></p>
   <p><%= "City: #{shelter.city}" %></p>
   <p><%= "State: #{shelter.state}" %></p>
