--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -3,6 +3,7 @@
 <% @shelters.each do |shelter| %>
   <h2><%= shelter.name %></h2>
   <%= link_to 'Update Shelter', "/shelters/#{shelter.id}/edit" %>
+  <%= link_to 'Delete Shelter', "/shelters/#{shelter.id}/destroy", data: {:confirm => "Are you sure you want to delete #{shelter.name}?"}, :method => :delete %>
   <p><%= "Address: #{shelter.address}" %></p>
   <p><%= "City: #{shelter.city}" %></p>
   <p><%= "State: #{shelter.state}" %></p>
