--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -2,6 +2,7 @@
 
 <% @pets.each do |pet| %>
   <h2><%= pet.name %></h2>
+  <%= link_to 'Update Pet', "/pets/#{pet.id}/edit" %>
   <p><%= "#{pet.image}" %></p>
   <p><%= "Age: #{pet.age}" %></p>
   <p><%= "Sex: #{pet.sex}" %></p>
