--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -3,6 +3,7 @@
 <% @pets.each do |pet| %>
   <h2><%= pet.name %></h2>
   <%= link_to 'Update Pet', "/pets/#{pet.id}/edit" %>
+  <%= link_to 'Delete Pet', "/pets/#{pet.id}/destroy", data: {:confirm => "Are you sure you want to delete #{pet.name}?"}, :method => :delete %>
   <p><%= "#{pet.image}" %></p>
   <p><%= "Age: #{pet.age}" %></p>
   <p><%= "Sex: #{pet.sex}" %></p>
