Add tests and functionality for links to pet and shelter show pages

--- a/app/views/shelters/pets.html.erb
+++ b/app/views/shelters/pets.html.erb
@@ -1,4 +1,4 @@
-<h1><%= "Pets at #{@shelter.name}" %></h1>
+<h1><%= link_to "#{@shelter.name}", "/shelters/#{@shelter.id}" %><%= " Available Pets" %></h1>
 
 <% @pets.each do |pet| %>
   <h2><%= pet.name %></h2>
