--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Pets</h1>
 
 <% @pets.each do |pet| %>
-  <h2><%= pet.name %></h2>
+  <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
   <%= link_to 'Update Pet', "/pets/#{pet.id}/edit" %>
   <%= link_to 'Delete Pet', "/pets/#{pet.id}/destroy", data: {:confirm => "Are you sure you want to delete #{pet.name}?"}, :method => :delete %>
   <p><%= "#{pet.image}" %></p>
