--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Shelters</h1>
 
 <% @shelters.each do |shelter| %>
-  <h2><%= shelter.name %></h2>
+  <h2><%= link_to "#{shelter.name}", "/shelters/#{shelter.id}" %></h2>
   <%= link_to 'Update Shelter', "/shelters/#{shelter.id}/edit" %>
   <%= link_to 'Delete Shelter', "/shelters/#{shelter.id}/destroy", data: {:confirm => "Are you sure you want to delete #{shelter.name}?"}, :method => :delete %>
   <p><%= "Address: #{shelter.address}" %></p>
