Add ltests and functionality for links to shelter and pet indexes from shelter/new

--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -1,3 +1,5 @@
+<header><%= link_to 'Shelters Index', '/shelters' %> <%= link_to 'Pets Index', '/pets' %></header>
+
 <%= form_tag('/shelters') do %>
   <p><%= label_tag 'Shelter Name' %></p>
   <%= text_area_tag 'name' %>
