Add tests and functionality for slinks to pet and shelter index pages from shelter pets page

--- a/app/views/shelters/pets.html.erb
+++ b/app/views/shelters/pets.html.erb
@@ -1,3 +1,5 @@
+<header><%= link_to 'Shelters Index', '/shelters' %> <%= link_to 'Pets Index', '/pets' %></header>
+
 <h1><%= link_to "#{@shelter.name}", "/shelters/#{@shelter.id}" %><%= " Available Pets" %></h1>
 
 <% @pets.each do |pet| %>
