--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,3 +1,5 @@
+<header><%= link_to 'Shelters Index', '/shelters' %> <%= link_to 'Pets Index', '/pets' %></header>
+
 <h1>All Pets</h1>
 
 <% @pets.each do |pet| %>
