Add tests and functionality for linkds to pet and shelter index pages from pet edit page

--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,3 +1,5 @@
+<header><%= link_to 'Shelters Index', '/shelters' %> <%= link_to 'Pets Index', '/pets' %></header>
+
 <%= form_tag("/pets/#{@pet.id}", method: :patch) do %>
   <p><%= label_tag 'Updated Pet Name' %></p>
   <%= text_area_tag 'name', "#{@pet.name}" %>
