Add tests and functionality for linkds to pet and shelter index pages from pet new page

--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,3 +1,5 @@
+<header><%= link_to 'Shelters Index', '/shelters' %> <%= link_to 'Pets Index', '/pets' %></header>
+
 <%= form_tag("/shelters/#{@shelter.id}/pets") do %>
   <p><%= label_tag 'Pet Name' %></p>
   <%= text_area_tag 'name' %>
