--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,3 +1,5 @@
+<header><%= link_to 'Shelters Index', '/shelters' %> <%= link_to 'Pets Index', '/pets' %></header>
+
 <h1><%= @pet.name %></h1>
 
 <p><%= "#{@pet.image}" %></p>
