Add test and functionality for link to shelter pets page from shelter show page

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -2,6 +2,8 @@
 
 <h1><%= @shelter.name %></h1>
 
+<%= link_to "#{@shelter.name}'s Pets", "/shelters/#{@shelter.id}/pets" %>
+
 <p><%= "Address: #{@shelter.address}" %></p>
 <p><%= "City: #{@shelter.city}" %></p>
 <p><%= "State: #{@shelter.state}" %></p>
