Change pet name from string to link to pet show page

--- a/app/views/shelters/pets.html.erb
+++ b/app/views/shelters/pets.html.erb
@@ -3,7 +3,7 @@
 <h1><%= link_to "#{@shelter.name}", "/shelters/#{@shelter.id}" %><%= " Available Pets" %></h1>
 
 <% @pets.each do |pet| %>
-  <h2><%= pet.name %></h2>
+  <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
   <p><%= "#{pet.image}" %></p>
   <p><%= "Description: #{pet.description}" %></p>
   <p><%= "Age: #{pet.age}" %></p>
