Modify test and view for shelter pet page to display images instead of image strings

--- a/app/views/shelters/pets.html.erb
+++ b/app/views/shelters/pets.html.erb
@@ -4,7 +4,7 @@
 
 <% @pets.each do |pet| %>
   <h2><%= link_to "#{pet.name}", "/pets/#{pet.id}" %></h2>
-  <p><%= "#{pet.image}" %></p>
+  <img src= <%= pet.image %> alt = <%= pet.name %> height="200">
   <p><%= "Description: #{pet.description}" %></p>
   <p><%= "Age: #{pet.age}" %></p>
   <p><%= "Sex: #{pet.sex}" %></p>
