--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= @pet.name %></h1>
 
-<p><%= "#{@pet.image}" %></p>
+<img src= <%= @pet.image %> alt = <%= @pet.name %> height="200">
 <p><%= "Description: #{@pet.description}" %></p>
 <p><%= "Age: #{@pet.age}" %></p>
 <p><%= "Sex: #{@pet.sex}" %></p>
